--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
       <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
 
       <h3>Sources</h3>
-      <ul>
-        <li><a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a></li>
-        <li><a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Wikipedia</a></li>
-      </ul>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Wikipedia</a>
     </div>
   </div>
 </body>
